--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -160,3 +160,5 @@ extra:
   social:
     - icon: fontawesome/brands/github-alt
       link: 'https://github.com/LuisHFB/fabAcademy'
+    - icon: fontawesome/brands/creative-commons
+     
